# RetrievalAugmentedGeneration-RAG-

./: .env.example  .gitignore  README.md  pyproject.toml  rag.ipynb  requirements.txt
data/docs/: sample.md  sample.txt
docs/benchmarks/: sample_fiqa.json  sample_scifact.json
old_code/: requirements-legacy.txt
rag_system/: __init__.py  __main__.py  cli.py  config.py  models.py
rag_system/api/: main.py
rag_system/core/: __init__.py  chunking.py  embeddings.py  generation.py  ingest.py  retrieval.py
rag_system/db/: pg.py  schema.sql
rag_system/evaluation/: __init__.py  beir_dense.py  plot_results.py  scifact.py
